2009-07-28  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: bump version to 1.5.1 ("Great")
	                small fixup in x11r7 checks regarding SMlib and libICE
	                non-bash compatibility
	
	* lisp/sawfish/wm/tabs/tab.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl
	* lisp/sawfish/wm/util/marks.jl: fixed license header	
	
	* po/Makefile.in: renamed realclean rule to distclean rule
	
	* lisp/sawfish/wm/placement/stagger.jl: fix group of stagger option
	
	* sawfish.desktop
	* sawfish-wm.dektop: fixed a typo, removed unneeded entries
	
	* lisp/sawfish/wm/ext/infinite-desktop.jl: fixed cursor warping [Jeremy Hankins]
	
	* lisp/sawfish/gtk/widget.jl: connect spinbuttons to value-changed signal (allows typing in the value manually)
	
	* src/Makefile.in: add --tag=CC there necessary on some systems [Gentoo]
	                   include $CFLAGS in gtk-style rule

	* sawfish-ksm.desktop: make sawfish appear in the KDE4 Windowselector

2009-07-02  Christopher Bratusek <zanghar@freenet.de>
	* po/*
	* configure.in: de-intltoolize sawfish ... is breaking current
	sawfish-ui badly, preparative tasks for tommorows 1.5.0 release

2009-06-26  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: added --with/without-nls option [disable installing
	translations files, default=enabled]

	* scripts/Makefile.in
	* lisp/Makefile.in
	* lisp/sawfish/ui/Makefile.in
	* lisp/sawfish/gtk/Makefile.in: expand REP_ENVIRON

	* lisp/sawfish/wm/session/init.jl: set RestartStyleHint to 2
	[Christian Marillat]

	* lisp/sawfish/wm/session/load.jl: when matching window to alist try
	to match according WM_NAME if there's no WM_CLASS [Christian Marillat]

	* README.IMPORTANT
	* man/news.texi: updated

2009-06-19  Christopher Bratusek <zanghar@freenet.de>
	* themes/microGUI/theme.jl: fixed a speed-issue

	* themes/Elberg-tabbed/theme.jl: make properly use of WM_NAME

	* lisp/sawfish/wm/ext/match-window.jl: expose fixed-position,
	never-iconify, never-maximize in the Window-Matcher UI