@@ -29,9 +29,9 @@ AM_PROG_LIBTOOL
 #IT_PROG_INTLTOOL([0.40.0])
 
 dnl Release versioning info
-version="1.5.1"
+version="1.5.2"
 subversion=""
-codename="Great"
+codename="Save The Robots"
 
 VERSION=${version}
 
