@@ -1,3 +1,8 @@
+2009-09-05  Christopher Bratusek <zanghar@freenet.de>
+	* configure.in: bump version to 1.5.2 ("Save The Robots")
+
+	* sawfish.spec.in: improved [Kim B. Heino]
+
 2009-07-28  Christopher Bratusek <zanghar@freenet.de>
 	* configure.in: bump version to 1.5.1 ("Great")
 	                small fixup in x11r7 checks regarding SMlib and libICE
